dev-tools/components/nexus3/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus
spec:
  to:
    kind: Service
    name: nexus
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
